finished working basic webapp

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -15,8 +15,11 @@
         <div class="col-lg-6 mx-auto">
           <p class="lead mb-4">Start a podcast where you are the host and you can choose freely what topic to explore and what to learn</p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <button type="button" class="btn btn-primary btn-lg px-4 gap-3"> <a href="{{ url_for('podcast_page')}}">Start podcast</a> </button>
-            <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
+            <form method="POST" action="{{url_for('home_page')}}">
+              {{ form.csrf_token }}
+              {{ form.topic.label }} {{ form.topic(size=50) }}
+              <input type="submit" value="Start Conversation">
+            </form>
           </div>
         </div>
       </div>
