--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -23,6 +23,15 @@
           </div>
         </div>
       </div>
+
+    <div>
+      {% if form.topic.data != None:%}
+
+        <p>{{form.topic.data}}</p>
+        <button inputmode="button"><a href="{{url_for('podcast_page')}}">Start Podscat</a></button>
+      {%endif%}
+
+    </div>
     
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
