--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -27,8 +27,10 @@
     
     <div class="col-1 mx-auto text-center">
       <div class="card text-white bg-primary mb-3">
+        <div class="card-header">
+          Topic
+        </div>
         <div class="card-body">
-          <h5 class="card-title">Topic</h5>
           <p class="card-text">{{form.topic.data}}</p>
           <a href="{{url_for('podcast_page')}}" class="btn btn-light">Start Podcast</a>
         </div>
