--- a/src/templates/podcast.html
+++ b/src/templates/podcast.html
@@ -11,18 +11,28 @@
     {%if messages != []: %}
 
         {% for message in messages : %}
-        <h3>{{message["role"]}}: </h1>
-        <p>{{message["content"]}}</p>
+        
+        <div class="col-3 mx-auto text-center">
+            <div class="card">
+                <div class="card-header">
+                    {{message["role"]}}
+                    </div>
+                <div class="card-body">
+                <p class="card-text">{{message["content"]}}</p>
+                </div>
+            </div>
+          </div>
 
         {% endfor%}
     {%endif%}
 
-    
-    <form method="POST" action="{{url_for('podcast_page')}}">
-        {{ form.csrf_token }}
-        {{ form.message.label }} {{ form.message(size=50) }}
-        <input type="submit" value="Send">
-    </form>
+    <div class="container mx-auto">
+        <form method="POST" action="{{url_for('podcast_page')}}">
+            {{ form.csrf_token }}
+            {{ form.message.label }} {{ form.message(size=50) }}
+            <input type="submit" value="Send">
+        </form>
+    </div>
     
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
